- Fixed a couple of SJOIN/Link problems detected by Curt|s
- Made /stats C show SSL/Zip flags
- Fixed the Stskeeps "mass G:line on /rehash" (tm) bug
- Removed last point of confusion in ALN/NS
- Removed CRYPTOIRCD (replaced by SSL)
- Added support for some more SJB64 stuff
- Added some more support for some even more SJB64 stuff
- Added some network files and even more network files
- Fixed some copyright stuff in ssl.c
- Fixed a /map problem
- Updated doc/conf.doc and doc/example.conf
- Fixed a bug where /map showed U:lines while HIDE_ULINES was set
- Removed "on network" in /whois oper
- Added code to makenet to stop fake submissions
- Fixed some /whois channels code, which may break +I /whois
- Fixed overflow in SJOIN
- Added SMO *, all users
- If a +r user is /who'ed, it shows a "r" in flags field. Suggested by
  Mirar.
- Fixed a typo in ssl.c
- Added SICI information, Donation information, fixed a ./Config problem
  overwriting certs ..
- Added hatblade's files
- Added some credits
- Fixed a real bad  /whois bug, reported by BiGi
- Fixed a problem with /sajoin .. atleast possible
- Added infofield in /stats L for clients/listeners
- Fixed a blocking socket thing
- Fixed up /stats L bug
- Changed CONNECTTIMEOUT to 30sec
- Changed some _more_ credits
- Fixed compile error found by Headbang
- #define CHINESE_NICK will make you able to use chinese nicks
  thanks to RexHsu and Aim
- Fixed up CHINESE_NICK and JAPANESE_NICK, suggested by Aim, see
  include/config.h
- Config change in SSL.h detection part
- SSL error change to sendto_umode(UMODE_JUNK)
- Fixed a hash error, topic problem

[fixes]
- Fixed a +d bug (it didnt send ` prefixes)
- Fixed a SJOIN bug, i think, thanks to Web
- Fixed a chinese nick thing, thanks to miCro and RexHsu
- Fixed a typo in config.h
- Fixed a bug in sendto_channel_prefix_tok reported by Strider@ChatCircuit
- Fixed P:line bug, caused by codemastr(tm) coding, (masskills), reported by
  sidv@sid-kitty-land.org